--- a/FuzzyCShape+.ipynb
+++ b/FuzzyCShape+.ipynb
@@ -12,7 +12,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install tslearn"
+        "!conda install -c conda-forge tslearn"
       ]
     },
     {
@@ -369,7 +369,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.9.13"
+      "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:01:00) \n[Clang 13.0.1 ]"
     },
     "vscode": {
       "interpreter": {
